<resources>
    <string name="app_name">Menu Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello Brittany Benjamin</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_button">New Activity</string>
    <string name="map_button">Map</string>
    <string name="phone_button">Phone</string>
    <string name="web_button">Web</string>
    <string name="sms_button">SMS</string>
    <string name="share_button">Share</string>
    <string name="action_help">Help</string>
    <string name="textView">Hello Brittany Benjamin</string>
</resources>